tests/ui/attributes/unsafe/unsafe-borrow-tuple.thirunsafeck.stderr
error[E0282]: type annotations needed
  --> $DIR/unsafe-borrow-tuple.rs:12:18
   |
LL |     let a = &mut foo.0.0;
   |                  ^^^^^^^ cannot infer type

error[E0609]: no field `0` on type `_ is 1..`
  --> $DIR/unsafe-borrow-tuple.rs:12:24
   |
LL |     let a = &mut foo.0.0;
   |                        ^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0609.
For more information about an error, try `rustc --explain E0282`.
